# MVP

./: .gitignore  README.md  VALE_pages.txt  build.py  dataframe_sql.py  pyproject.toml
company_symbols/: all_symbols.txt
docs/source/: conf.py  index.rst  mvp.rst
metadata/: HTMLToData.py  HTMLToDataV2.py  HTMLToNewsData.py  News.db  Recommendations.db  ToDo.txt  URLextractor.py  companyNews.py  csvToDB.py  dateToDateTime.py  finhubTickers.txt  finvizURLs.txt  output.txt  stocks.txt  test.py  tickers.py  topBRinNYSE.txt  topBRinNYSEFullTable.txt  way-back-commands.txt  wayBackURLs.py  waybackAuto.sh
metadata/ABEV/: 20150113061345.html  20150417102324.html  20150730233120.html  20151029205441.html  20151030222348.html  20160311113421.html  20160511173456.html  20160818235302.html  20170606082050.html  20191025183257.html  ABEVNews.csv  ABEVRecomendation.csv  ABEVRecommendations.csv  ABEV_out.txt
metadata/BAK/: 20100515044343.html  20101125015625.html  20110316172241.html  20140818231006.html  20150312103006.html  20160525183651.html  20191115205652.html  (+5 more)
metatrader_ea/: SendListOfSymbols.mq5
mvp/: CUSUM.ipynb  __init__.py  _bootstrap.cpp  _bootstrap.h  bootstrap.pyx  builder.py  curated.py  curated_builder.py  data_toolbox.py  database_builder.py  draw.py  helper.py  labels.py  metamodel.py  numba_stats.py  portfolio_manager.py  primary.py  randomforrest.py  rawdata.py  refined_data.py  report.py  script.py  selection.py  teste.py  toolbox.py  utils.py
scripts/: Visualization.ipynb  create_new_metatrader_db.py  generate_curated_data.py  markowitz.py  primary_models_dev.ipynb  test_classical.ipynb  time_interval_databases.py  update_metatrader_db.py  update_yahoo_db.py
tests/: test_selection.py
(+424 files in other folders)
