[tool.poetry]
name = "MVP"
version = "0.1.0"
description = ""
authors = ["Caio Dadauto <caiodadauto@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

#[tool.pylint.messages_control]
#disable = "C0330, C0326"

[tool.black]
line-length = 79
