[tool.poetry]
name = "MVP"
version = "0.1.0"
description = ""
authors = ["Caio Dadauto <caiodadauto@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8.5"
pandas = "^1.2.1"
numpy = "^1.20.0"
statsmodels = "^0.12.2"
matplotlib = "^3.3.4"
numba = "^0.52.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

#[tool.pylint.messages_control]
#disable = "C0330, C0326"

[tool.black]
line-length = 79
